LPS-57647 - was causing alignment issue with nav tabs in add panel

--- a/modules/frontend/frontend-themes-web/src/META-INF/resources/html/themes/_styled/css/control_menu/_add_panel.scss
+++ b/modules/frontend/frontend-themes-web/src/META-INF/resources/html/themes/_styled/css/control_menu/_add_panel.scss
@@ -2,7 +2,7 @@
 	background-color: #FFF;
 	bottom: 0;
 	overflow: auto;
-	padding: 0 20px;
+	padding: 0 15px;
 	position: fixed;
 	right: 0;
 	top: 0;
